--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,6 @@
-# Server Environment Variables
+# Database - Get from Neon Dashboard
+DATABASE_URL=postgresql://username:password@host.neon.tech/dbname?sslmode=require
+
+# Server
 PORT=3000
 NODE_ENV=development
