--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.5.24"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@typescript-eslint/parser": "^8.52.0",
