--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "*.{ts,tsx,vue}": ["pnpm exec eslint --fix", "pnpm exec prettier --write"],
+  "*.{ts,tsx,vue}": ["pnpm exec prettier --write"],
   "*.{js,jsx,json,md}": ["pnpm exec prettier --write"]
 }
