--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Run type checking
         run: pnpm type-check
 
-      - name: Check code formatting
-        run: pnpm format:check
+      - name: Format code (auto-fix)
+        run: pnpm format
 
   build-client:
     name: Build Client
