feat: enable serverless deployment on vercel
- refactor Hono app into shared app.ts for reuse
- add Vercel handler api/[[...route]].ts using hono/vercel adapter
- keep local dev via @hono/node-server entrypoint
- add FRONTEND_ORIGIN to .env.example for CORS configuration

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,3 +4,4 @@ DATABASE_URL=postgresql://username:password@host.neon.tech/dbname?sslmode=requir
 # Server
 PORT=3000
 NODE_ENV=development
+FRONTEND_ORIGIN=http://localhost:5173
